# interview-public-python-ai

./: DEVSECOPS_INTERVIEW.md  README.md  SDE_INTERVIEW.md  mise.toml
backend/: .env  Dockerfile.prod  main.py  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  llm_factory.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  conversations.py  messages.py
backend/app/services/: chat_service.py
frontend/: .prettierignore  Dockerfile.prod  eslint.config.js  kubb.config.ts  nginx.conf  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatArea.tsx  ConversationSidebar.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/hooks/: index.ts  useStreamingChat.ts
frontend/src/lib/: axios-instance.ts
infrastructure/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/helm/chatapp/: Chart.yaml  values.yaml
infrastructure/helm/chatapp/templates/: backend-deployment.yaml  db-migration-job.yaml
infrastructure/k8s/: secrets.yaml
infrastructure/scripts/: create-k8s-secrets.sh  deploy.sh  destroy.sh
